tests/reference/asr-dprod_01-80a930c.stderr
semantic error: first argument of `dprod` must have kind equals to 4
 --> tests/errors/dprod_01.f90:2:13
  |
2 |     print*, dprod(4.23_8, 4.3_8)
  |             ^^^^^^^^^^^^^^^^^^^^ 
